[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html-tstring"
version = "0.1.0"
description = "Tools to manipulate and render HTML using Python 3.14's t-strings."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [{ name = "Dave Peck", email = "davepeck@davepeck.org" }]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/t-strings/html-tstring"
Changelog = "https://github.com/t-strings/html-tstring/releases"
Issues = "https://github.com/t-strings/html-tstring/issues"
CI = "https://github.com/t-strings/html-tstring/actions"

[dependency-groups]
dev = [
  "pyright>=1.1.404",
  "pytest>=8.4.1",
  "pytest-watcher>=0.4.3",
  "ruff>=0.12.11",
]

[tool.pytest.ini_options]
testpaths = ["html_tstring"]
python_files = ["*_test.py"]

[tool.pyright]
include = ["html_tstring"]
exclude = [".venv", ".git", ".github"]

[tool.ruff.lint]
preview = true

[tool.hatch.build]
exclude = [
  "*_test.py",
  ".github",
  ".gitignore",
  ".vscode",
  ".editorconfig",
  "uv.lock",
  "justfile",
]
