[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html-tstring"
version = "0.1.1"
description = "A 🤘 rockin' t-string HTML templating system for Python 3.14."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["markupsafe>=3.0.2"]
authors = [{ name = "Dave Peck", email = "davepeck@davepeck.org" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Text Processing :: Markup :: HTML",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/t-strings/html-tstring"
Changelog = "https://github.com/t-strings/html-tstring/releases"
Issues = "https://github.com/t-strings/html-tstring/issues"
CI = "https://github.com/t-strings/html-tstring/actions"

[dependency-groups]
dev = [
  "pyright>=1.1.404",
  "pytest>=8.4.1",
  "pytest-watcher>=0.4.3",
  "ruff>=0.12.11",
]

[tool.pytest.ini_options]
testpaths = ["html_tstring"]
python_files = ["*_test.py"]

[tool.pyright]
include = ["html_tstring"]
exclude = [".venv", ".git", ".github"]

[tool.ruff.lint]
preview = true

[tool.hatch.build]
exclude = [
  "*_test.py",
  ".github",
  ".gitignore",
  ".vscode",
  ".editorconfig",
  "uv.lock",
  "justfile",
]
